Revision history for Plack-Middleware-Statsd

{{$NEXT}}

v0.6.1    2022-09-02 16:05:17+01:00 Europe/London
  [Other]
  - Signed distribution.

v0.6.0    2022-07-26 16:50:26+01:00 Europe/London
  [Incompatable Changes]
  - Minimum Perl version is v5.14.

  [Enhancements]
  - Use Feature::Compat::Try instead of Try::Tiny to catch errors.

  [Documentation]
  - Bump copyright year.

  - Fixed encoding of links in README.

  [Toolchain]
  - Updated MANIFEST.SKIP.

v0.5.1    2021-07-03 14:08:05+01:00 Europe/London
  [Documentation]
  - Documented the version required for the catch_errors attribute.

v0.5.0    2021-06-15 17:03:29+01:00 Europe/London
  [Enhancements]
  - Add catch_errors option to handle errors in the application.

v0.4.7    2021-04-27 16:47:35+01:00 Europe/London
  [Bug Fixes]
  - Use sample_rate for content length metrics.

v0.4.6    2021-04-21 16:51:41+01:00 Europe/London
  [Enhancements]
  - Check if internal methods are unused before fetching arguments.

  - Improve argument handling for internal methods.

  [Documentation]
  - Bump copyright year.

  [Tests]
  - Add more author tests.

v0.4.5    2020-05-11 18:29:17+01:00 Europe/London
  [Documentation]
  - Updated section on the psgi.worker.pid metric.

  [Other]
  - Stop removing strict and warnings from prerequisites.

v0.4.4    2020-04-30 14:04:10+01:00 Europe/London
  [Documentation]
  - Added example with Plack::Middleware::SizeLimit.

v0.4.3    2020-03-23 08:59:39+00:00 Europe/London
  - No changes since v0.4.2.

v0.4.2    2020-03-21 18:28:31+00:00 Europe/London (TRIAL RELEASE)
  [Enhancements]
  - Emit warnings if the client does not support expected methods.

  - Die if the histogram, increment or set_add attributes are not
    coderefs.

  [Tests]
  - Added tests for how errors are trapped and logged.

  - Add Test::Pod::LinkCheck author test.

  [Other]
  - Explicitly declare List::Util and Time::HiRes as prereqs.

v0.4.1    2020-03-21 17:15:30+00:00 Europe/London (TRIAL RELEASE)