@@ -1,6 +1,8 @@
 Revision history for Plack-Middleware-Statsd
 
 {{$NEXT}}
+  [Enhancements]
+  - Simplified code for tracking Content-Type headers.
 
 v0.6.1    2022-09-02 16:05:17+01:00 Europe/London
   [Other]
